Better support for profiles in branch/release scripts.