@@ -9,13 +9,27 @@ fi
 set -x
 echo Running release for $CI_COMMIT_REF_NAME
 
+
+if [ -n "$MAVEN_RELEASE_PROFILES" ]; then
+  PROFILES="-P${MAVEN_RELEASE_PROFILES}"
+elif [ -n "$MAVEN_PROFILES" ]; then
+  PROFILES="-P${MAVEN_PROFILES}"
+else
+  PROFILES=""
+fi
+
+#WARNING: A terminally deprecated method in sun.misc.Unsafe has been called
+MAVEN_OPTS="--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow"
+
 mvn --threads 1 \
     -DpushChanges=false \
     --batch-mode \
     -Darguments="-DskipTests"  \
     release:clean \
     release:prepare \
+    $PROFILES \
     -DdryRun=$DRY_RUN
+
 cat release.properties
 if [[ "$DRY_RUN" == "false" ]] ; then git push --atomic -v --follow-tags;  fi
 SCM_TAG=$(awk -F= '$1 == "scm.tag" {print $2}' release.properties)
@@ -28,7 +42,9 @@ NEW_TAG_SLUG=$(echo $NEW_TAG | iconv -t ascii//TRANSLIT | sed -E -e 's/[^[:alnum
 export NEW_TAG_SLUG
 echo "RELEASE_VERSION=$RELEASE_VERSION, SLUG $NEW_TAG_SLUG"
 git checkout "$CI_COMMIT_REF_NAME"
-mvn -DdryRun=$DRY_RUN -Darguments="$MAVEN_ARGS -DskipTests" $MAVEN_ARGS $MAVEN_RELEASE_PROFILES  -B release:perform
+
+mvn -DdryRun=$DRY_RUN -Darguments="$MAVEN_ARGS -DskipTests" $MAVEN_ARGS $PROFILES  -B release:perform
+
 echo "RELEASE_VERSION="$RELEASE_VERSION | tee -a  ${JOB_ENV}  # RELEASE_VERSION is the version that will be used in deploy stage
 echo "PROJECT_VERSION="$RELEASE_VERSION | tee -a  ${JOB_ENV}  # PROJECT_VERSION recognized by kaniko image?
 echo "NEW_TAG="$NEW_TAG| tee -a  ${JOB_ENV}  # RELEASE_VERSION is the version that will be used in deploy stage
